Fiddling with URLs

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <h2>Follow Me</h2>
       <ul class="list-inline">
         <li>
-          <a href="www.linkedin.com" target="_blank">
+          <a href="index.html/www.linkedin.com" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="www.github.com" target="_blank">
+          <a href="index.html/www.github.com" target="_blank">
             <i class="fa-brands fa-square-github"></i>
           </a>
         </li>
