--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="images/osc.png" style="width:175px; height:175px" class="img-circle"/>
       <h2>Systems Analyst</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras bibendum luctus velit, sit amet commodo justo ultrices sed. Morbi consequat enim ac augue scelerisque, id molestie lacus accumsan. Suspendisse potenti. Donec quis molestie dolor. Vestibulum congue diam magna, ac tempus ante aliquam at. Duis id fermentum nunc, at vulputate nibh. In quis purus risus.</p>
-        <a href="http://www.google.com" target="_blank">
+        <a href="https://www.google.com" target="_blank">
           <div class="btn-blue">
             Google
           </div>
@@ -25,12 +25,12 @@
     <h2>Follow Me</h2>
       <ul class="list-inline">
         <li>
-          <a href="www.linkedin.com" target="_blank">
+          <a href="https://www.linkedin.com" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="www.github.com" target="_blank">
+          <a href="https://www.github.com" target="_blank">
             <i class="fa-brands fa-square-github"></i>
           </a>
         </li>
